tests/baselines/reference/parser_breakNotInIterationOrSwitchStatement2.errors.txt
parser_breakNotInIterationOrSwitchStatement2.ts(2,12): error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
parser_breakNotInIterationOrSwitchStatement2.ts(3,5): error TS1107: Jump target cannot cross function boundary.


==== parser_breakNotInIterationOrSwitchStatement2.ts (2 errors) ====
    while (true) {
      function f() {
               ~
!!! error TS1250: Function declarations are not allowed inside blocks in strict mode when targeting 'ES5'.
        break;
        ~~~~~~
!!! error TS1107: Jump target cannot cross function boundary.
      }
    }